# fastapi-template

./: Dockerfile  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: sanity.yaml
fastapi_template/: main.py
fastapi_template/app/: app.py
fastapi_template/app/configs/: db.py  env-sample.yml  settings.py
fastapi_template/app/database/: db.py
fastapi_template/app/models/: user.py
fastapi_template/app/routes/: user.py
fastapi_template/app/utils/: auth.py  exception_handler.py  logger.py  middlewares.py
tests/: conftest.py
