[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = "A boilerplate template to create a FastAPI Project"
authors = ["rayyanhunerkar <rayyan.hunerkar@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_template"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.19"}
alembic = "^1.8.1"
asyncpg = "^0.28.0"
pyjwt = "^2.6.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
envyaml = "^1.10.211231"
greenlet = "^2.0.1"
pre-commit = "^3.3.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
sqlalchemy-utils = "^0.41.1"
pytest-mock = "^3.10.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.1.1"}
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
